# query-builder

./: .gitignore  BUILD_FIX_SUMMARY.md  BUILD_REPORT.md  CREATE_GITHUB_REPO.md  CROSS_COMPILE_REPORT.md  CROSS_PLATFORM.md  Cargo.toml  GITHUB_ACTIONS_BUILD_LOG.md  GITHUB_ACTIONS_COMPLETE_GUIDE.md  GITHUB_ACTIONS_ERROR_FIX.md  GITHUB_ACTIONS_GUIDE.md  PRERELEASE.md  PUBLISH.md  QUICK_START.md  README.md  README_OLD.md  REALITY_CHECK.md  RELEASE_CHECKLIST.md  RUST_ADVANTAGES.md  SUCCESS_FINAL_REPORT.md  SUCCESS_REPORT.md  TYPE_HINTS_GUIDE.md  cancel_duplicates.sh  cancel_workflows.sh  check_release.sh  check_workflows.sh  comprehensive_fix_v0.1.6.sh  debug_actions.sh  emergency_fix_maturin_v0.1.8.sh  emergency_fix_powershell.sh  example_with_types.py  fallback_to_simple_maturin.sh  final_verification.sh  fix_pypi_name_conflict.sh  fix_status.sh  fix_windows_v0.1.5.sh  github_actions_setup.sh  launch_v0.1.4.sh  manual_trigger_guide.sh  maturin_fix_verification.sh  (+16 more)
.github/workflows/: build-cibuildwheel.yml  build-simple-maturin.yml  build-simple.yml  build.yml  test-simple.yml
sql/: api.user.yaml  demo.yaml  queries.yaml  security_test.yaml  tera_demo.yaml
src/: lib.rs  lib_old.rs
tests/: test_query_builder.py  test_sql_builder.py
