[package]
name = "query-builder-tool"
version = "0.1.15"
edition = "2021"
description = "A SQL query builder for Python using pyo3."

[lib]
name = "query_builder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
tera = "1.19"
regex = "1.10"

[package.metadata.maturin]
name = "query_builder"
