[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "query-builder-tool"
version = "0.1.15"
description = "A secure SQL query builder for Python using Rust and pyo3. Supports dynamic templates with safety checks against SQL injection."
requires-python = ">=3.8,<3.13"
authors = [
    {name = "缪克拉", email = "2972799448@qq.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["sql", "query", "builder", "security", "rust", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
module-name = "query_builder"
features = ["pyo3/extension-module", "pyo3/abi3-py38"]

[tool.cibuildwheel]
# 构建所有Python版本
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
# 跳过32位和musllinux
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]
# 全局环境变量
environment = {PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1", PYO3_NO_PYTHON = "1"}
build-verbosity = 1

[tool.cibuildwheel.windows]
# Windows特定配置
environment = {PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1", PYO3_NO_PYTHON = "1"}
before-build = "pip install maturin"

[project.urls]
Homepage = "https://github.com/miaokela/query-builder"
Repository = "https://github.com/miaokela/query-builder"
Documentation = "https://github.com/miaokela/query-builder#readme"
"Bug Tracker" = "https://github.com/miaokela/query-builder/issues"
